--- a/12-02-Atividade Bhaskara If/extra/index.html
+++ b/12-02-Atividade Bhaskara If/extra/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css.css">
-    <script src="desafio01-2.js" defer>
+    <link rel="stylesheet" href="style.css">
+    <script src="calculoDesconto.js" defer>
 
     </script>
 </head>
